# sae503

./: .gitignore  .gitmodules  Dockerfile  Makefile  appdeployement.yml  deploy.yaml  docker-compose.yml  docker-entrypoint.sh  gen.py  pyproject.toml  redisdeployement.yml
deploy/: k3s.sh  kube.sh
kube/: app-deployement.yml  app-route.yml  grafana-route.yml  prometheus-route.yml  prometheus.yml  redis-deployement.yml  traefik-deployment.yaml  traefik-service.yaml
kube/prometheus/alertmanager/alerts/: alert-error.yaml
kube/prometheus/alertmanager/base/: alertmanager-config.yml  alertmanager-route.yml  alertmanager-smtp.template
kube/prometheus/grafana/: APP-dashboard.json  grafana-route.yml
kube/ressources/: dev-quota.yml  staging-quota.yml
kube/routes/: grafana-route.yml  prometheus-route.yml
kube/traefik/: traefik-basicauth.yaml  traefik-deployment.yaml  traefik-route.yaml  traefik-service-monitor.yaml  traefik-service.yaml  traefik-static-config.yaml
templates/: app-helm.yaml.j2  app-template.yaml.j2
