[tool.poetry]
name = "sae503"
version = "0.1.0"
description = ""
authors = ["Nicolas signed-log FORMICHELLA <stigpro@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
