[tool.poetry]
name = "sae503"
version = "0.1.0"
description = ""
authors = ["Nicolas signed-log FORMICHELLA <stigpro@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
ipython = "^8.21.0"


[tool.poetry.group.py.dependencies]
redis = "^5.0.1"
uvicorn = "^0.27.0.post1"
prometheus-fastapi-instrumentator = "^6.1.0"
fastapi = "^0.109.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2